syntax="proto3";
package merak;
option go_package = "merak/";
import "common.proto";

service MerakAgentService {
    rpc PortHandler (InternalPortConfig) returns (AgentReturnInfo) {}
}

message InternalPortConfig {
    OperationType operation_type = 1;
    string id = 2;
    string name = 3;
    string vpcid = 4;
    string tenantid = 5;
    string projectid = 6;
    string subnetid = 7;
    string gw = 8;
    string sg = 9;
    string cidr = 10;
    string hostname = 11;
    string remoteid = 12;
    string deviceid = 13;
}

message ReturnPortInfo {
    string ip = 1;
    string remoteid = 2;
    string deviceid = 3;
    Status status = 8;
}

message AgentReturnInfo {
    ReturnCode return_code = 1;
    string return_message = 2;
    ReturnPortInfo port = 3;
}